<resources>
    <string name="app_name">Music Seque</string>

    <!--Sign up screen-->

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail Adress</string>
    <string name="phone_no">Phone Number</string>
    <string name="passwor">Password</string>


    <!--log in screen-->
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_pasw">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">110694626482085</string>
    <string name="fb_login_protocol_scheme">fb110694626482085</string>

</resources>
